Fixed profile request, minor ci fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,5 @@ jobs:
         
       - name: Build project
         run: NODE_OPTIONS=--openssl-legacy-provider npm run build
+        env:
+          CI: false
